<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tVTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="172dp"
        android:layout_marginTop="32dp"
        android:text="@string/tVTitulo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/eTNumero"
        android:layout_width="250dp"
        android:layout_height="71dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="64dp"
        android:ems="10"
        android:hint="@string/eTNumero"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnCalcularKm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="136dp"
        android:onClick="calcularKM"
        android:text="@string/btnCalcularKm"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <Button
        android:id="@+id/btnCalcularHm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="136dp"
        android:onClick="calcularHM"
        android:text="@string/btnCalcularHm"
        app:layout_constraintStart_toEndOf="@+id/btnCalcularKm"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <Button
        android:id="@+id/btnCalcularDm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="24dp"
        android:onClick="calcularDM"
        android:text="@string/btnCalcularDc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCalcularKm" />

    <Button
        android:id="@+id/btnCalculardc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:onClick="calculardd"
        android:text="@string/btnCalculardc"
        app:layout_constraintEnd_toEndOf="@+id/btnCalcularHm"
        app:layout_constraintTop_toBottomOf="@+id/btnCalcularHm" />

    <Button
        android:id="@+id/btnCalcularcm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="16dp"
        android:onClick="calcularcm"
        android:text="@string/btnCalcularcm"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCalcularDm" />

    <Button
        android:id="@+id/btnCalcularmm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="calcularmm"
        android:text="@string/btnCalcularmm"
        app:layout_constraintEnd_toEndOf="@+id/btnCalculardc"
        app:layout_constraintTop_toBottomOf="@+id/btnCalculardc" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />

</androidx.constraintlayout.widget.ConstraintLayout>